src/components/MovieDetails.css
.movie-details-container {
  background-size: cover;
  background-position: center;
  height: 100vh; /*Ensure the container takes the full height of the viewport*/

  /*Add flex styles to arrange child elements*/
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.back-to-container {
  font-size: 1.5rem;
  margin-left: 2rem;
  margin-top: 1rem;
}

.back-to-container a {
  text-decoration: none;
  color: white;
}

.info-container {
  /* Add styles for side-by-side layout */
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-end;
  width: 100%; 
  margin-bottom: 2rem;
}

.image-details-container {
  width: 342px;
  height: auto;
  padding: 5px;
  background-color: white;
  margin-left: 2.5rem;
  margin-bottom: 2rem;
}

.movie-info {
  margin-left: 1.5rem;
  margin-bottom: 2rem;
  color: white;
  width: 400px;
}

.title-rating-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1.5rem;
  margin-bottom: 0.8rem;
}

.title {
  font-weight: 700;
}
.rating {
  margin-left: 2rem;
  padding: 0.2rem;
  background-color: white;
  color: black;
}

.overview {
  font-size: 1rem;
}

/* @media (max-width: 768px) {
  .movie-info {
    flex-direction: column;
    align-items: center;
  }
} */

/*Medium screens*/
@media screen and (max-width: 800px) {
  .image-details-container {
    width: 242px
  }
} 

@media screen and (max-width: 650px) {

  .image-details-container {
    width: 142px;
  }
} 

@media screen and (max-width: 400px) {
  .info-container {
    display: block;
  }

} 

